<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Depth of Field Calculator</string>
    <string name="Second_activity_name">Lens Details</string>
    <string name="ex_canon">ex: Canon</string>
    <string name="ex_200_for_200mm">ex: 200 for 200mm</string>
    <string name="make">Make</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length_mm">Focal Length [mm]</string>
    <string name="select_a_lens_to_use">Select a lens to use:</string>
    <string name="hint">hint</string>
    <string name="_0_029">0.029</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="depth_of_field">Depth Of Field</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="currently_there_are_no_available_lenses_please_add_a_lens_by_pressing_the_floating_action_button_in_the_bottom_right_corner">Currently there are no available lenses! Please add a lens by pressing the floating action button in the bottom right corner.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="optional_features_n3_2_edit_and_delete_lens_n3_3_error_checking_input_n3_4_auto_recalculate_n3_7_empty_state">Optional Features:  3.2 Edit and Delete Lens  3.3 Error Checking Input  3.4 Auto-recalculate  3.7 Empty state</string>
    <string name="ex_0_029">ex: 0.029</string>
    <string name="lens_image">Lens Image</string>
    <string name="grey">Grey</string>
    <string name="brown">Brown</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="aqua">Aqua</string>
    <string name="make_shown_here">Make shown here</string>
</resources>
