<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/make"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        app:layout_constraintStart_toStartOf="@+id/makeInput"
        app:layout_constraintTop_toTopOf="@+id/makeInput">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/makeInput"
        android:layout_width="378dp"
        android:layout_height="52dp"
        android:hint="@string/ex_canon"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/focalLength"
        android:layout_width="380dp"
        android:layout_height="57dp"
        android:hint="@string/ex_200_for_200mm"
        app:layout_constraintBottom_toTopOf="@+id/aperture"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/makeInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/focalLengthInput"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:hint="@string/ex_200_for_200mm"
            android:inputType="numberSigned"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aperture"
        android:layout_width="383dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/make"
        app:layout_constraintVertical_bias="0.329">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apertureInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_2_8_for_f2_8"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03892944" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <TextView
        android:id="@+id/textViewMake"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textViewFocalLength"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginBottom="57dp"
        android:text="@string/focal_length_mm"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/focalLength"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textViewAperture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/aperture"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/aperture"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/aperture"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/aperture"
        app:layout_constraintVertical_bias="0.858" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="183dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/aperture"
        app:layout_constraintVertical_bias="0.746">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aqua" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Green" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teal" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Brown" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Grey" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewLensImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lens Image"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/aperture" />

    <ImageView
        android:id="@+id/imageIcon2"
        android:layout_width="109dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textViewLensImage"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/camera1" />

</androidx.constraintlayout.widget.ConstraintLayout>